Improve lazyload mode switching